# subtitulos-ai

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: whisper_transcribe.py
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: whisper_transcribe.py
src-tauri/src/: main.rs
src/components/: SubtitleEditor.jsx  TranscriptionPanel.jsx  VideoSelector.jsx
